objects/ZObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZObj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>